Updates from Overleaf

--- a/biblio.bib
+++ b/biblio.bib
@@ -163,21 +163,6 @@
    Pages = {870-878},
       Year = {2019} }
 
-
-
-
-@article{chambers2011,
-   Author = {Chambers, Christopher P and Miller, Alan D},
-   Title = {Rules for aggregating information},
-   Journal = {Social Choice and Welfare},
-   Volume = {36},
-   Number = {1},
-   Pages = {75-82},
-      Year = {2011} }
-
-
-
-
 @article{eliaz2006,
    Author = {Eliaz, Kifur and Ok, Eliaz},
    Title = {Indifference or indecisiveness? Choice-theoretic foundations of incomplete preferences},
@@ -185,9 +170,6 @@
    Volume = {56},
    Pages = {61-86},
       Year = {2006} }
-
-
-
 
 @misc{munger2019,
    Author = {Munger, Michael},
@@ -580,6 +562,120 @@
    Volume = {135},
    Pages = {1-20},
       Year = {2020} }
+
+
+@article{harsanyi1955,
+   Author = {Harsanyi, John C},
+   Title = {Cardinal welfare, individualistic ethics, and interpersonal comparisons of utility},
+   Journal = {Journal of political economy},
+   Volume = {63},
+   Number = {4},
+   Pages = {309-321},
+      Year = {1955} }
+
+
+
+
+@article{roughgarden2010,
+   Author = {Roughgarden, Tim},
+   Title = {Algorithmic game theory},
+   Journal = {Communications of the ACM},
+   Volume = {53},
+   Number = {7},
+   Pages = {78-86},
+      Year = {2010} }
+
+
+@article{dudzik2023,
+   Author = {Dudzik, Andrew and von Glehn, Tamara and Pascanu, Razvan and Veličković, Petar},
+   Title = {Asynchronous Algorithmic Alignment with Cocycles},
+   Journal = {arXiv preprint arXiv:2306.15632},
+      Year = {2023} }
+
+
+@article{dudzik2022,
+   Author = {Dudzik, Andrew and Veličković, Petar},
+   Title = {Graph Neural Networks are Dynamic Programmers},
+   Journal = {arXiv preprint arXiv:2203.15544},
+      Year = {2022} }
+
+
+
+@article{knaster1928,
+   Author = {Knaster, Bronisław},
+   Title = {Un theoreme sur les functions d'ensembles},
+   Journal = {Ann. Soc. Polon. Math.},
+   Volume = {6},
+   Pages = {133-134},
+      Year = {1928} }
+
+
+
+
+@article{cousot1979,
+   Author = {Cousot, Patrick and Cousot, Radhia},
+   Title = {Constructive versions of Tarski’s fixed point theorems},
+   Journal = {Pacific journal of Mathematics},
+   Volume = {82},
+   Number = {1},
+   Pages = {43-57},
+      Year = {1979} }
+
+
+
+
+@article{hayhoe2017,
+   Author = {Hayhoe, Mikhail and Alajaji, Fady and Gharesifard, Bahman},
+   Title = {A Polya contagion model for networks},
+   Journal = {IEEE Transactions on Control of Network Systems},
+   Volume = {5},
+   Number = {4},
+   Pages = {1998-2010},
+      Year = {2017} }
+
+
+
+
+@article{blondel2009,
+   Author = {Blondel, Vincent D. and Hendrickx, Julien M. and Tsitsiklis, John N.},
+   Title = {On Krause's Multi-Agent Consensus Model With State-Dependent Connectivity},
+      Year = {2009} }
+
+@article{ghaderi2014,
+   Author = {Ghaderi, Javad and Srikant, Rayadurgam},
+   Title = {Opinion dynamics in social networks with stubborn agents: Equilibrium and convergence rate},
+   Journal = {Automatica},
+   Volume = {50},
+   Number = {12},
+   Pages = {3209-3215},
+      Year = {2014} }
+
+
+@article{kendall1938,
+   Author = {Kendall, Maurice G},
+   Title = {A new measure of rank correlation},
+   Journal = {Biometrika},
+   Volume = {30},
+   Number = {1/2},
+   Pages = {81-93},
+      Year = {1938} }
+
+
+@inproceedings{tailor2021,
+   Author = {Tailor, Shyam A and Opolka, Felix and Lio, Pietro and Lane, Nicholas Donald},
+   Title = {Do We Need Anisotropic Graph Neural Networks?},
+   BookTitle = {International Conference on Learning Representations},
+      Year = {2021} }
+
+
+
+
+
+
+
+
+
+
 
 
 
