worked on greedy.py

--- a/root.tex
+++ b/root.tex
@@ -13,12 +13,6 @@
 \usepackage{microtype}
 \usepackage{stmaryrd}
 
-%WARNINGS
-\usepackage{silence}
-\WarningsOff
-
-
-
 %MACROS
 \renewcommand{\preceq}{\preccurlyeq}
 \renewcommand{\succeq}{\succcurlyeq}
@@ -119,7 +113,7 @@ While preference relations representable by utility functions (which is in itsel
 
 Before we discuss parallels of our work to other literature, e.g., in opinion dynamics, and more formally define the preference dynamics problem we consider here, we take a moment to address an ``elephant in the room'': Do preferences, even, change? To be sure, it is widely believed that preferences are stable, and that apparent fluctuations in preferences are, actually, the result of changes in information (e.g.,~prices, in an economic setting), not the preferences themselves \cite{stigler1977}. Dissenting voices, few and far between \cite{hansen1995}, suppose that preferences can, in fact, change due to factors of external influence, e.g.,~by other agents, and internal coherence, i.e.,~altering inconsistent preferences. In our model of preference dynamics, we take into account both elements of preference change. Mechanisms of preference change include revision, contradiction, as well as addition and subtraction of alternatives \cite{hansen1995}. Our message-passing model of preference dynamics, based on the algebraic lattice structure of preference relations, incorporates elements of both revision (the join operation) and contradictions (the meet operation). We remain agnostic to the ``preference change'' debate. Avoiding the chicken-or-the-egg, our conception of preference dynamics can be construed as either an explanation for how preferences are formed in the first place, or how confounding variables affect the perceived expression of preference. The ``true'' preferences of agents, then, are, perhaps, those that are stable: they are equilibrium points in a preference dynamical system. We characterize the stable preferences and discuss sufficient conditions for when they are computable (Section \ref{sec:stable}).
 
-% While preferences have been studied classically in the human domain, we now argue that preference dynamics extends in scope to non-human agents. Intelligent multi-robot systems, for instance, making autonomous decisions about what tasks to perform as well as what paths to take to reach a target location, are, arguably, making their decisions based on preference. If robots make these decisions collaboratively, or even react to the decisions of other agents, they are also, in effect, dynamically aggregating preferences. In reinforcement learning (RL) \cite{furnkranz2012,wirth2017,natarajan2005}, especially unexplainable models \cite{christiano2017}, agents form implicit preferences based on performing actions that maximize rewards, although sometimes rewards and broader goals can become misaligned \cite{pan2022}, a phenomenon known as ``reward hacking.'' Several efforts \cite{huang2021,korbak2023,ibarz2018} have been made to design systems whose outcomes imitate human preference, but, in the absence of a human controller, it is a challenging problem to control preferences of autonomous agents. Our strategy to is design decentralized algorithmic mechanisms \cite{roughgarden2010} converging to stable preferences.
+\textcolor{red}{While preferences have been studied classically in the human domain, we now argue that preference dynamics extends in scope to non-human agents. Intelligent multi-robot systems, for instance, making autonomous decisions about what tasks to perform as well as what paths to take to reach a target location, are, arguably, making their decisions based on preference. If robots make these decisions collaboratively, or even react to the decisions of other agents, they are also, in effect, dynamically aggregating preferences. In reinforcement learning (RL) \cite{furnkranz2012,wirth2017,natarajan2005}, especially unexplainable models \cite{christiano2017}, agents form implicit preferences based on performing actions that maximize rewards, although sometimes rewards and broader goals can become misaligned \cite{pan2022}, a phenomenon known as ``reward hacking.'' Several efforts \cite{huang2021,korbak2023,ibarz2018} have been made to design systems whose outcomes imitate human preference, but, in the absence of a human controller, it is a challenging problem to control preferences of autonomous agents. Our strategy to is design decentralized algorithmic mechanisms \cite{roughgarden2010} converging to stable preferences.}
 
 %\subsection*{Related work}
 
