Updates from Overleaf

--- a/biblio.bib
+++ b/biblio.bib
@@ -636,10 +636,16 @@
 
 
 
+
 @article{blondel2009,
    Author = {Blondel, Vincent D. and Hendrickx, Julien M. and Tsitsiklis, John N.},
    Title = {On Krause's Multi-Agent Consensus Model With State-Dependent Connectivity},
+   Journal = {IEEE Transactions on Automatic Control},
       Year = {2009} }
+
+
+
+
 
 @article{ghaderi2014,
    Author = {Ghaderi, Javad and Srikant, Rayadurgam},
