--- a/root.tex
+++ b/root.tex
@@ -575,7 +575,7 @@ Because the dynamical system \eqref{eq:global-pi} resembles a diffusion process,
 
 We considered $N=20$ agents and compared the convergence of their preference profiles for various $k$-regular graphs. The Dirichlet energy for two such graphs ($k=4,8$) are plotted in Fig.~\ref{fig:1}. As expected, every trajectory converged to a stable preference profile (see Theorem \ref{theorem:constructive}). We make some additional observations. The Dirichlet energy, for each trajectory, was non-decreasing, reflecting a greater or equal level of disagreement each round. We also observed the total level of disagreement (energy) was higher for graphs with higher connectivity. Both of these observations are explained by $F$ satisfying the inflationary property: agents can only include more comparisons in the next round and agents with more neighbors means more comparisons to choose from. We were surprised that trajectories tended to cluster into stable preference profiles with a similar level of total disagreement. One possible explanation for this could be that several profiles in the lattice of stable profiles (see Theorem \ref{thm:complete-lattice}) have similar levels of Dirichlet energy. We examine the emergent behavior of disagreement more closely by comparing the Kendall tau distances between connected agents in the initial profile $\profile(0)$ versus the final stable profile $\profile(t_{\max})$. We display our results with a heat map over the network (see Fig.~\ref{fig:2}). We observe, at least in this example, that agents, who initially have some disagreement, end up disagreeing more, while agents who don't disagree initially, never disagree. Hence, it appears, the dynamics make disagreements more pronounced.
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
     \begin{subfigure}[b]{0.6\textwidth}
     \includegraphics[width=\textwidth]{figs/fig2alt.png}
     \caption{}
