--- a/root.tex
+++ b/root.tex
@@ -109,7 +109,7 @@ In this paper we are concerned with the emergent formation of preferences in gro
 While we avoid the assumptions that agents have preferences \emph{a priori}, and that agents they can assign a preference to every possible comparison of alternatives, i.e.,~a \emph{complete preference}, or, even worse, a numerical value to every alternative, i.e.,~a \emph{utility function}, we do assume that preferences are local to the individual agents. In fact, in many applications, including, e.g., games, it is unrealistic to assume that preferences are common knowledge, i.e., that every agent knows every other agent's preferences, every agent knows that every agent knows every other agent's preference, etc.
 % \textcolor{red}{[MZ: I am confused. In the above paragraph, you mention a couple of assumptions and then you say that you relax those assumptions. I think you should just mention the assumptions you make!]}
   
-While preference relations representable by utility functions (which is in itself a strong assumption since even complete preferences can be unrepresentable \cite{Beardon2002}) come with a slew of analytical techniques and computational algorithms, e.g.~a Nash equilibrium, raw preference relations have no such exploitable analytical structure. To analyze raw preference relations, in this paper we resort to algebraic techniques, rather than analytic, posing a new set of challenges. However, our primary motivation for avoiding utility theory is that time-variant utility functions cannot capture preference formation since cardinal or ordinal utilities necessarily compare every alternative. Moreover, the distinction between indifference and indecisiveness, i.e.,~the agent has not made up its mind or faced a choice \cite{eliaz2006}, is captured by incomplete preference relations and not utilitiy functions, although extended preferences are another approach here \cite{harsanyi1955}. We propose an entirely new methodology that relies on imposing an information order on preference relations (Section \ref{sec:lattices}) to reason about incomplete preferences which, also, is capable of modeling preference change (Section \ref{sec:dynamics}). 
+While preference relations represented by utility functions (which is in itself a strong assumption since even complete preferences can be unrepresentable \cite{Beardon2002}) come with a slew of analytical techniques and computational algorithms, e.g.~a Nash equilibrium, raw preference relations have no such exploitable analytical structure. To analyze raw preference relations, in this paper we resort to algebraic techniques, rather than analytic, posing a new set of challenges. However, our primary motivation for avoiding utility theory is that time-variant utility functions cannot capture preference formation since cardinal or ordinal utilities necessarily compare every alternative. Moreover, the distinction between indifference and indecisiveness, i.e.,~the agent has not made up its mind or faced a choice \cite{eliaz2006}, is captured by incomplete preference relations and not utility functions, although extended preferences are another approach here \cite{harsanyi1955}. We propose an entirely new methodology that relies on imposing an information order on preference relations (Section \ref{sec:lattices}) to reason about incomplete preferences which, also, is capable of modeling preference change (Section \ref{sec:dynamics}). 
 
 Before we discuss parallels of our work to other literature, e.g., in opinion dynamics, and more formally define the preference dynamics problem we consider here, we take a moment to address an ``elephant in the room'': Do preferences, even, change? To be sure, it is widely believed that preferences are stable, and that apparent fluctuations in preferences are, actually, the result of changes in information (e.g.,~prices, in an economic setting), not the preferences themselves \cite{stigler1977}. Dissenting voices, few and far between \cite{hansen1995}, suppose that preferences can, in fact, change due to factors of external influence, e.g.,~by other agents, and internal coherence, i.e.,~altering inconsistent preferences. In our model of preference dynamics, we take into account both elements of preference change. Mechanisms of preference change include revision, contradiction, as well as addition and subtraction of alternatives \cite{hansen1995}. Our message-passing model of preference dynamics, based on the algebraic lattice structure of preference relations, incorporates elements of both revision (the join operation) and contradictions (the meet operation). We remain agnostic to the ``preference change'' debate. Avoiding the chicken-or-the-egg, our conception of preference dynamics can be construed as either an explanation for how preferences are formed in the first place, or how confounding variables affect the perceived expression of preference. The ``true'' preferences of agents, then, are, perhaps, those that are stable: they are equilibrium points in a preference dynamical system. We characterize the stable preferences and discuss sufficient conditions for when they are computable (Section \ref{sec:stable}).
 
@@ -117,7 +117,7 @@ Before we discuss parallels of our work to other literature, e.g., in opinion dy
 
 %\subsection*{Related work}
 
-Closely related to the preference dynamics problem considered here are recent efforts on consensus \cite{riess2022} and synchronization \cite{riess2023} using ordered sets, e.g.,~lattices. In fact, several authors have studied aggregation or consensus on lattices \cite{karacal2017,chambers2011}, and there is a corpus of literature addressing the design of preference-aggregation mechanisms, originating with \cite{arrow2012}, but, to our knowledge, none of these works have approached the problem of preference dynamics from either a decentralized or algebraic point-of-view, both of which we do here. The several efforts to formalize classical consensus algorithms with lattice theory \cite{barthelemy1991}, motivated by data science \cite{jeanpierre1986} and distributed systems \cite{attiya1995}, are restricted to a complete or star topology. Our treatment of preference dynamics is also closely related to opinion dynamics (see \cite{noorazar2020} for a survey), originating with \cite{degroot1974}. Opinions are typically framed as numeric representations of likes or dislikes, versus preferences, which depict relationships between alternatives. Several of the mechanisms for preference change we discuss (Section \ref{sec:dynamics}) have analogues in opinion dynamics including  lying, exaggerating, or downplaying \cite{hansen2021}, stubornness \cite{ghaderi2014}, incorporating a notion of confidence in other agents' opinions \cite{hegselmann2002,blondel2009}, and confirmation bias \cite{hayhoe2017}.
+Closely related to the preference dynamics problem considered here are recent efforts on consensus \cite{riess2022} and synchronization \cite{riess2023} using ordered sets, e.g.,~lattices. In fact, several authors have studied aggregation or consensus on lattices \cite{karacal2017,chambers2011}, and there is a corpus of literature addressing the design of preference-aggregation mechanisms, originating with \cite{arrow2012}, but, to our knowledge, none of these works have approached the problem of preference dynamics from either a decentralized or algebraic point-of-view, both of which we do here. The several efforts to formalize classical consensus algorithms with lattice theory \cite{barthelemy1991}, motivated by data science \cite{jeanpierre1986} and distributed systems \cite{attiya1995}, are restricted to a complete or star topology. Our treatment of preference dynamics is also closely related to opinion dynamics (see \cite{noorazar2020} for a survey), originating with \cite{degroot1974}. Opinions are typically framed as numeric representations of likes or dislikes, versus preferences, which depict relationships between alternatives. Several of the mechanisms for preference change we discuss (Section \ref{sec:dynamics}) have analogues in opinion dynamics including  lying, exaggerating, or downplaying \cite{hansen2021}, stubbornness \cite{ghaderi2014}, incorporating a notion of confidence in other agents' opinions \cite{hegselmann2002,blondel2009}, and confirmation bias \cite{hayhoe2017}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -131,7 +131,7 @@ Suppose agents are collected in a finite set $\N = \{1,2,\dots,N\}$ and interact
 For the purpose of illustration, we discuss three examples of agents, alternatives, preferences and graphs from different domains.
 
 \begin{example}[Trade]
-    Suppose consumers and producers have various levels of supply and demand for $d$ different goods. The alternative set consists of  bundles-of-goods, positive quantities of each alternative, constrained by the divisibility or availabilities of each alternative, $\A \subseteq \R^{d}_{+}$. Preferences consist of comparisons between bundles of goods. The graph is a bipartite graph whose edges consist of pairs of consumers and producers who engage in trade.
+    Suppose consumers and producers have various levels of supply and demand for $d$ different goods. The alternative set consists of  bundles-of-goods, positive quantities of each alternative, constrained by the divisibility or availability of each alternative, $\A \subseteq \R^{d}_{+}$. Preferences consist of comparisons between bundles of goods. The graph is a bipartite graph whose edges consist of pairs of consumers and producers who engage in trade.
 \end{example}
 \begin{example}[Social Media]
     Suppose users on a social media platform are sharing posts about the candidates in an upcoming election with their ``friends'' on the platform. The alternative set consists of the candidate in the election.
@@ -202,7 +202,7 @@ But first, we present some rudimentary material about lattices, starting with ev
 \subsection{Preorders \& Partial Orders}
 \vspace{-0.25em}
 
-A \emph{preorder} is a set $\P$ with a relation $\precsim$ satisfying the axioms of transitivity and reflexivity. Preferences, we assume, are preorders, and we will use both terms interchangeably thoughout this paper. A \emph{partial order} is a preorder, with the order relation usually written $\preceq$, satisfying a third axiom: if $\pi_1 \preceq \pi_2$ and $\pi_2 \preceq \pi_1$, then $\pi_1 = \pi_2$. Note, we do not assume preferences satisfy this third axiom, because agents can be indifferent between two alternatives. In partial orders, however, we conveniently write $\pi_1 \prec \pi_2$ whenever $\pi_1 \preceq \pi_2$, but $\pi_2 \not \preceq \pi_1$.
+A \emph{preorder} is a set $\P$ with a relation $\precsim$ satisfying the axioms of transitivity and reflexivity. Preferences, we assume, are preorders, and we will use both terms interchangeably throughout this paper. A \emph{partial order} is a preorder, with the order relation usually written $\preceq$, satisfying a third axiom: if $\pi_1 \preceq \pi_2$ and $\pi_2 \preceq \pi_1$, then $\pi_1 = \pi_2$. Note, we do not assume preferences satisfy this third axiom, because agents can be indifferent between two alternatives. In partial orders, however, we conveniently write $\pi_1 \prec \pi_2$ whenever $\pi_1 \preceq \pi_2$, but $\pi_2 \not \preceq \pi_1$.
 
 We consider several types of maps between ordered sets. A map $f: \P \to \Q$ between partial orders is \emph{monotone} if $\pi_1 \preceq_{\P} \pi_2$ implies $f(\pi_1) \preceq_{\Q} f(\pi_2)$. A map $f: \P \to \P$ is \emph{inflationary} if $f(\pi) \succeq \pi$ for all $\pi \in \P$, and \emph{deflationary} if $f(\pi) \preceq \pi$ for all $\pi \in \P$. Note, inflationary or deflationary functions are not necessarily monotone.
 % Let $\Fix(f) = \{ \pi \in \L: f(\pi) = \pi \}$ denote the set of fixed points.
@@ -582,7 +582,7 @@ We considered $N=20$ agents and compared the convergence of their preference pro
     \caption{}
     \label{fig:2b}
     \end{subfigure}
-    \caption{On a $k$-regular graph ($k=4$) with $N =20$ nodes with a randomly-selected initial preference profile, we plot (a) the Kenall tau distance $d(\pi_i(t),\pi_j(t))$ for every $(i,j) \in \E$ for both $t=0$ (initial disagreement) and $t=15$ (final disagreement) with a heat-map on the edges of the graph. We also plot (b) the Dirichlet energy of the trajectory (black) as well as the energies of other trajectories from different initial conditions (blues).}
+    \caption{On a $k$-regular graph ($k=4$) with $N =20$ nodes with a randomly-selected initial preference profile, we plot (a) the Kendall tau distance $d(\pi_i(t),\pi_j(t))$ for every $(i,j) \in \E$ for both $t=0$ (initial disagreement) and $t=15$ (final disagreement) with a heat-map on the edges of the graph. We also plot (b) the Dirichlet energy of the trajectory (black) as well as the energies of other trajectories from different initial conditions (blues).}
     \label{fig:2}
     \vspace{-1em}
 \end{figure*}
