--- a/biblio.bib
+++ b/biblio.bib
@@ -1,4 +1,40 @@
 
+@article{nishimura2023,
+   Author = {Nishimura, Hiroki and Ok, Efe A.},
+   Title = {A Class of Dissimilarity Semimetrics for Preference Relations},
+   Journal = {Mathematics of Operations Research},
+      Year = {2023} }
+
+
+
+@article{curello2019,
+   Author = {Curello, Gregorio and Sinander, Ludvig},
+   Title = {The preference lattice},
+   Journal = {arXiv preprint arXiv:1902.07260},
+      Year = {2019} }
+
+
+@article{ziegler2019,
+   Author = {Ziegler, Daniel M and Stiennon, Nisan and Wu, Jeffrey and Brown, Tom B and Radford, Alec and Amodei, Dario and Christiano, Paul and Irving, Geoffrey},
+   Title = {Fine-tuning language models from human preferences},
+   Journal = {arXiv preprint arXiv:1909.08593},
+      Year = {2019} }
+
+
+@book{fagin2004reasoning,
+  title={Reasoning about knowledge},
+  author={Fagin, Ronald and Halpern, Joseph Y and Moses, Yoram and Vardi, Moshe},
+  year={2004},
+  publisher={MIT press}
+}
+
+@book{lingel2021leveraging,
+  title={Leveraging Complexity in Great-Power Competition and Warfare},
+  author={Lingel, Sherrill Lee and Sargent, Matthew and Gulden, Timothy R and McDonald, Tim and Rockstroh, Parousia},
+  year={2021},
+  publisher={RAND Corporation}
+}
+
 @article{degroot1974,
    Author = {DeGroot, Morris H},
    Title = {Reaching a consensus},
