fixed issue with IEEEcommandlockout

--- a/root.tex
+++ b/root.tex
@@ -109,14 +109,12 @@ When agents or teams of agents in multi-agent systems are responsible for unilat
 
 % In their traditional use in economics and social science, preferences are commonly associated with taste. Mathematically, however, a preference relation is a relative ordering of \emph{alternatives}, possible choices or options. Preferences are fundamental, e.g., to collective decision---the social choice problem problem \cite{munger2015}---involving collecting and aggregating input from voters, or to non-cooperative games\cite{osborne1994} in which players take actions based on their preferences and the preferences of other agents. In the social choice problem, a fundamental challenge is to design preference-aggregation mechanisms that satisfy certain criteria of fairness. When agents can only communicate or interact locally with other agents, it is not feasible to aggregate preferences in a centralized manner. Worse, even if truthful preferences can be gathered from every agent \cite{gibbard1973,satterthwaite1975}, faithfully representing preferences of a group of agents by a single aggregate preference is well-known to be a paradox \cite{arrow2012}. In a non-cooperative game, players are assumed from the outset to have preferences on the set of action profiles, tuples of actions indexed by players to be taken in the game. 
  
-
-
 % We avoid the standard assumptions from social choice theory \cite{arrow2012} that agents have preferences \emph{a priori}, and that agents they can assign a preference to every possible comparison of alternatives, i.e.,~a \emph{complete preference}, or, even worse, a numerical value to every alternative, i.e.,~a \emph{utility function}, we do assume that preferences are local to the individual agents. In fact, in many scenarios, especially in contested environments, preferences cannot be assumed to be common knowledge \cite{fagin2004reasoning}, i.e., that every agent knows every other agent's preferences, every agent knows that every agent knows every other agent's preference, etc.
 
   
 % \subsection*{Methedology}
 
-In their traditional use in economics and social science, preferences are commonly associated with subjective taste. Here, we take the liberty to extend the notion of preference to arbitrary decision-making contexts, ranging from reinforcement learning (RL)\cite{natarajan2005} to games \cite{roughgarden2010} to language models \cite{ziegler2019}.  Formally, a \emph{preference relation} is a relative ordering on a set of \emph{alternatives} (i.e.~possible choices or options). While preference relations represented by utility functions\footnote{A preference relation $\prefers$ is representable by a utility function $u$ if $u(a) \geq u(b)$ if and only if $a \prefers b$.} (which is in itself a strong assumption since even complete preferences can be unrepresentable \cite{Beardon2002}) come with a slew of analytical techniques and computational algorithms, e.g.~a Nash equilibrium, raw preference relations have no such exploitable analytical structure. To analyze raw preference relations, in this paper we resort to algebraic techniques, rather than analytic, posing a new set of challenges. However, our primary motivation for avoiding utility theory is that time-variant utility functions cannot capture preference formation since cardinal or ordinal utilities necessarily compare every alternative. Moreover, the distinction between indifference and indecisiveness, i.e.,~the agent has not made up its mind or faced a choice \cite{eliaz2006}, is captured by incomplete preference relations and not utility functions, although extended preferences are another approach here \cite{harsanyi1955}.
+In their traditional use in economics and social science, preferences are commonly associated with subjective taste. Here, we take the liberty to extend the notion of preference to arbitrary decision-making contexts, ranging from reinforcement learning (RL)\cite{natarajan2005} to games \cite{roughgarden2010} to language models \cite{ziegler2019}.  Formally, a \emph{preference relation} is a relative ordering on a set of \emph{alternatives} (i.e.~possible choices or options). While preference relations represented by utility functions (which is in itself a strong assumption since even complete preferences can be unrepresentable \cite{Beardon2002}) come with a slew of analytical techniques and computational algorithms, e.g.~a Nash equilibrium, raw preference relations have no such exploitable analytical structure. To analyze raw preference relations, in this paper we resort to algebraic techniques, rather than analytic, posing a new set of challenges. However, our primary motivation for avoiding utility theory is that time-variant utility functions cannot capture preference formation since cardinal or ordinal utilities necessarily compare every alternative. Moreover, the distinction between indifference and indecisiveness, i.e.,~the agent has not made up its mind or faced a choice \cite{eliaz2006}, is captured by incomplete preference relations and not utility functions, although extended preferences are another approach here \cite{harsanyi1955}.
 
 We propose an entirely new methodology that relies on imposing an information order on preference relations (Section \ref{sec:lattices}) to reason about incomplete preferences which, also, is capable of modeling preference change (Section \ref{sec:dynamics}). 
 % Before we discuss parallels of our work to other literature, e.g., in opinion dynamics, and more formally define the preference dynamics problem we consider here, we take a moment to address an ``elephant in the room'': Do preferences, even, change? To be sure, it is widely believed that preferences are stable, and that apparent fluctuations in preferences are, actually, the result of changes in information (e.g.,~prices, in an economic setting), not the preferences themselves \cite{stigler1977}. Dissenting voices, few and far between \cite{hansen1995}, suppose that preferences can, in fact, change due to factors of external influence, e.g.,~by other agents, and internal coherence, i.e.,~altering inconsistent preferences.
